--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@ button:active {
   <label>LOT</label>
   <select id="lot"></select>
 
-  <label>NO PLATE</label>
-  <input id="plate" placeholder="ABC1234" autocomplete="off">
+  <label>REG NUM</label>
+  <input id="plate" placeholder="" autocomplete="off">
 
   <button onclick="submitData()">SUBMIT</button>
 
@@ -117,7 +117,7 @@ button:active {
 </div>
 
 <div class="footer">
-Powered by Visitor Parking System
+Powered by Mred tech
 </div>
 
 <script>
