--- a/index.html
+++ b/index.html
@@ -50,14 +50,15 @@
     color:#222;
   }
   select, input{
-    width:100%;
-    padding:14px;
-    font-size:18px;
-    border-radius:12px;
-    border:1px solid #cfcfcf;
-    margin-top:8px;
-    background:#f4f4f4;
-    outline:none;
+  width:100%;
+  padding:14px;
+  font-size:18px;
+  border-radius:12px;
+  border:2px solid #176B39;
+  margin-top:8px;
+  background:#ffffff;
+  outline:none;
+  box-sizing:border-box; /* 🔥 FIX UTAMA */
   }
   select:focus, input:focus{
     border:2px solid #176B39;
