--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
   select, input{
   width:100%;
   padding:14px;
-  font-size:18px;
+  font-size:30px;
+  font-weight:bold
   border-radius:12px;
   border:2px solid #176B39;
   margin-top:8px;
