--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   select, input{
   width:100%;
   padding:14px;
-  font-size:30px;
+  font-size:18px;
   font-weight:bold
   border-radius:12px;
   border:2px solid #176B39;
@@ -156,7 +156,7 @@
     <option>05:00</option>
   </select>
 
-  <label>LOT</label>
+  <label>LOT PARKING</label>
   <div class="lot-nav">
     <button type="button" class="navbtn" onclick="prevLot()">◀</button>
     <div class="lot-display" id="lotDisplay">GV01</div>
