--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
     width:100%;
     padding:13px;
     font-size:18px;
+    font-weight:900;
     border-radius:12px;
     border:2px solid #176B39;
     margin-top:7px;
