--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
   </div>
 
   <label>REG NUM</label>
-  <input id="regInput" placeholder="ABC1234" autocomplete="off" inputmode="text" />
+  <input id="regInput" placeholder="" autocomplete="off" inputmode="text" />
 
   <div class="hint" id="hintText">LOT GV01 / 33 (Swipe kiri/kanan pun boleh)</div>
 
